<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">WhatZon</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected></string>
    <string name="no_place_selected">&lt;No place selected></string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">353512978179396</string>
    <string name="exception">Exception: %1$s</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_checkbox_preference1">Music</string>
    <string name="title_checkbox_preference2">Party</string>
    <string name="title_checkbox_preference3">Movies</string>
    <string name="title_checkbox_preference4">Education</string>
    <string name="title_checkbox_preference5">Politics</string>
    <string name="title_checkbox_preference6">Food</string>
    <string name="dialog_title_edittext_preference">Enter search range</string>
    <string name="dialog_based_preferences">Search Options</string>
    <string name="title_edittext_preference">Search Range</string>
    <string name="summary_edittext_preference">Range in miles to search for events</string>
    <string name="inline_preferences">Tags</string>
    <string name="title_parent_preference1">Music</string>
    <string name="title_parent_preference2">Party</string>
    <string name="title_parent_preference3">Movies</string>
    <string name="title_parent_preference4">Education</string>
    <string name="title_parent_preference5">Politics</string>
    <string name="title_parent_preference6">Food</string>
    <string name="title_list_preference">Event times</string>
    <string name="summary_list_preference">What events you want based on time</string>
    <string name="title_activity_geral">Geral</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_navigation_drawer_fragment">NavigationDrawerFragment</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
