<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <PreferenceCategory

            android:title="@string/inline_preferences">
            
        <CheckBoxPreference
                android:key="checkbox_preference1"

                android:title="@string/title_checkbox_preference1"/>

        <CheckBoxPreference
            android:key="checkbox_preference2"
            android:title="@string/title_checkbox_preference2"/>

        <CheckBoxPreference
            android:key="checkbox_preference3"
            android:title="@string/title_checkbox_preference3" />

        <CheckBoxPreference
            android:key="checkbox_preference4"
            android:title="@string/title_checkbox_preference4"/>

        <CheckBoxPreference
            android:key="checkbox_preference5"
            android:title="@string/title_checkbox_preference5"/>

        <CheckBoxPreference
            android:key="checkbox_preference6"
            android:title="@string/title_checkbox_preference6"/>

    </PreferenceCategory>
                
    <PreferenceCategory
            android:title="@string/dialog_based_preferences">

        <EditTextPreference
                android:key="edittext_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/dialog_title_edittext_preference" />
                
        <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/dialog_title_list_preference" />

    </PreferenceCategory>



    
</PreferenceScreen>
